--- a/src/eni/seis/theme/theme-south/src/less/layout/adminbar.less
+++ b/src/eni/seis/theme/theme-south/src/less/layout/adminbar.less
@@ -4,7 +4,7 @@
   }
   box-sizing: content-box!important;
   background: #75ad0a;
-  @media (max-width: 568px) {
+  @media @screen-md-max {
     display: none;
   }
   #edit-bar {
